--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
-Error: No Output Directory named "public" found after the Build completed. You can configure the Output Directory in your Project Settings.
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "dist/server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/dist/server.js"
+      }
+    ]
+  }
