--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
